sideba & slider position  change

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,5 +1,3 @@
-.sidebar-main-content{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+.sidebar_menu{
+    overflow: hidden;
 }
